fix: z-index of opened burger menu

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,4 +1,6 @@
 .page-header {
+  position: relative;
+  z-index: 1;
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
